--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -8,7 +8,7 @@
     "forceConsistentCasingInFileNames": true,
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "baseUrl": "./",
+    "baseUrl": "src",
     "outDir": "dist",
     "paths": {
       "*": ["node_modules/*"]
