--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -13,6 +13,6 @@
     "paths": {
       "*": ["node_modules/*"]
     },
-    "typeRoots": ["./node_modules/@types", "./src/types"]
+    "typeRoots": ["./src/types", "./node_modules/@types"]
   }
 }
