--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "@types/express": "^4.17.19",
     "@types/jsonwebtoken": "^9.0.3",
     "@types/node": "^20.4.9",
+    "nodemon": "^3.0.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.6"
   },
