--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "crypto-deploy",
   "scripts": {
-    "install-server": "cd server && npm install",
-    "start-server": "cd backend && node app.js",
+    "build-server": "cd server && npm run build",
+    "start-server": "cd backend && npm run start",
     "install-client": "cd client && npm install",
     "build-client": "cd client && npm run build",
     "start-client": "cd client && npm run start"
