--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "crypto-deploy",
   "scripts": {
     "build-server": "cd server && npm run build",
-    "start-server": "cd backend && npm run start",
+    "start-server": "cd server && npm run start",
     "install-client": "cd client && npm install",
     "build-client": "cd client && npm run build",
     "start-client": "cd client && npm run start"
