--- a/server/package.json
+++ b/server/package.json
@@ -5,33 +5,31 @@
   "main": "dist/server.js",
   "scripts": {
     "build": "npm ci && tsc",
-    "start": "node dist/server.js",
-    "dev": "nodemon --exec ts-node src/server.ts",
-    "server": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts"
+    "start": "npm run build && node dist/server.js",
+    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/bcrypt": "^5.0.0",
-    "@types/cookie-parser": "^1.4.5",
-    "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.19",
-    "@types/jsonwebtoken": "^9.0.3",
-    "@types/node": "^20.4.9",
-    "nodemon": "^3.0.1",
+    "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.8",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.8",
+    "@types/node": "^22.13.0",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.1.6"
+    "typescript": "^5.7.3"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "cookie-parser": "^1.4.6",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
+    "dotenv": "^16.4.7",
+    "express": "^5.0.0",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.4.2",
-    "ts-node": "^10.9.1"
+    "mongoose": "^8.9.6",
+    "ts-node": "^10.9.2"
   }
 }
